2010-12-26	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - fixed type of summary_char[]
	  - fixed typo in comment

2010-11-27	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* doc/aide.1.in:
	  - fixed format in FILES section
	  - added hint on how to decode base64 encoded checksums

2010-11-26	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* doc/manual.html:
	 - applied changes by Jack Blankenship <Jack.Blankenship@bcbssc.com>

2010-11-16	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - added missing declaration of aclt variable

2010-11-14	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/conf_yacc.y:
	  - fixed declaration of conftext variable
	* configure.in:
	  - fixed compilation under Solaris
	* README:
	  - added hint to use --disable-static under Solaris 10/OpenSolaris

2010-10-12	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c, src/do_md.c:
	  - replaced "File" by "Entry"

2010-10-11	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/aide.c, doc/aide.conf.5.in:
	  - enabled summarize_changes by default

2010-09-29	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - rewrote summarize_changes feature to work with node->changed_attrs
	  - replaced "files" by "entries"
	  - made e2fsattrs2string static
	  - use S_IFMT to extract the file type code

2010-09-27	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c:
	  - added bytecmp, has_str_changed, has_md_changed, compare_single_acl,
	    has_acl_changed, cmp_xattr_node, have_xattrs_changed (copied and
	    renamed from src/compare_db.c)
	  - added get_changed_attributes function
	  - use get_changed_attributes instead of compare_dbline
	  - save changed attributes in node->changed_attrs
	* include/compare_db.h, src/compare_db.c:
	  - removed obsolete compare_dbline function

2010-09-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/compare_db.h: removed init_rxlst function