@@ -1,3 +1,7 @@
+2010-12-27	Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* src/compare_db.c:
+	  - added xattrs2array, acl2array and get_attribute_values functions
+
 2010-12-26	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* src/compare_db.c:
 	  - fixed type of summary_char[]
